fix background flickering when showing document load spinner

--- a/public/less/designview/documentview.less
+++ b/public/less/designview/documentview.less
@@ -8,7 +8,6 @@
 }
 
 .design-view-document-buttons-wrapper-outer {
-  background: @white;
   margin: 0 auto 64px; // 64 is a size of bottom footer in designview
   min-height: 220px; // must be synced with refreshMargins() in documentview.js
   padding: 18px 0; // must be synced with refreshMargins() in documentview.js
